Titutulo y Body Cambiados

--- a/ejemplos.html
+++ b/ejemplos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>T&iacute;tulo de la p&aacute;gina</title>
+	<title>M&aacute;s T&iacute;tulo de la p&aacute;gina</title>
 </head>
 <body>
 	Texto dentro de la p&aacute;gina<br>
