--- a/ejemplos.html
+++ b/ejemplos.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>M&aacute;s T&iacute;tulo de la p&aacute;gina</title>
+	<title>
+	M&aacute;s T&iacute;tulo de la p&aacute;gina</title>
 </head>
 <body>
 	Este texto es de la rama Prueba - algo<br>
+	otra wea nas en la master <br>
 	Texto dentro de la p&aacute;gina<br>
 	no respeta enter <br>
 	Este a&ntilde;o aprendo web <p>Este es otro p&aacute;rrafo
