--- a/ejemplos.html
+++ b/ejemplos.html
@@ -4,7 +4,7 @@
 	<title>M&aacute;s T&iacute;tulo de la p&aacute;gina</title>
 </head>
 <body>
-	Este texto es de la rama Prueba - algo<br>
+	Este texto es de la rama Prueba - algo - en la prueba <br>
 	Texto dentro de la p&aacute;gina<br>
 	no respeta enter <br>
 	Este a&ntilde;o aprendo web <p>Este es otro p&aacute;rrafo
