--- a/PrimerHTML5.html
+++ b/PrimerHTML5.html
@@ -3,12 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css/estilosHTML5.css">
 </head>
 <body>
 	<header>
 		<h1> Título de la Página</h1>
-		Menú de navegación<br>
-		Logo de la Empresa
+		<nav>
+			<ul>
+				<li>Inicio</li>
+				<li>Archivo</li>
+				<li>Herrmanientas</li>
+				<li>Reportes</li>
+				<li>Salir</li>
+			</ul>
+		</nav>
 	</header>
 	<main>
 		<section>
