--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Practica 01 HTML5+CSS3</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body >
 	<header>
 		<img src="img/resplandor.png" alt="">
-		<img src="img/logo.png" alt="">
+		<img src="img/logo.png" alt="" id="logo" name = "logo">
 		<nav>
 			<ul>
 				<li>Inicio</li>
@@ -23,16 +24,17 @@
 			</form>
 		</nav>
 	</header>
-	<section>
+	<section id="seccion01">
 		<article>
 			<img src="img/slide2.jpg" alt="">
 		</article>
 	</section>
-	<section>
+	<section id="seccion02">
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			Una Seccion<br>
+			<span class="unaSeccion">Una Seccion</span>
+			<br>
 			Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.
 			<p></p>
 			<input type="submit" value ="Ver mas">
@@ -40,7 +42,7 @@
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			Otra Seccion
+			<span clas="otraSeccion">Otra Seccion</span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -54,7 +56,7 @@
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			Un Video
+			<span clas="otraSeccion">Un Video</span>
 			<br>
 			<img src="img/video.jpg">
 		</article>
