--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -9,6 +9,7 @@
 	<header>
 		<img src="img/resplandor.png" alt="">
 		<img src="img/logo.png" alt="" id="logo" name = "logo">
+		<marquee>
 		<nav>
 			<ul>
 				<li>Inicio</li>
@@ -20,9 +21,10 @@
 			</ul>
 			<form action="#">
 				<input type="text" name="srch" placeholder="Buscar aqui...">
-				<input type="button" name="" value ="Buscar">
+				<input type="submit" name="" value ="Buscar">
 			</form>
 		</nav>
+	</marquee>
 	</header>
 	<section id="seccion01">
 		<article>
@@ -33,7 +35,7 @@
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			<span class="unaSeccion">Una Seccion</span>
+			<span class="unaSeccion nito">Una Seccion</span>
 			<br>
 			Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.
 			<p></p>
@@ -42,21 +44,20 @@
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			<span clas="otraSeccion">Otra Seccion</span>
+			<span class="otraSeccion nito">Otra Seccion</span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. <br> Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			cillum dolore eu fugiat nulla pariatur. 
 			<br>
 			<input type="submit" value ="Ver mas">
 		</article>
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			<span clas="otraSeccion">Un Video</span>
+			<span class="otraSeccion nito">Un Video</span>
 			<br>
 			<img src="img/video.jpg">
 		</article>
