--- a/practica02/index.html
+++ b/practica02/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>Practica 02 HTML5+CSS3</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	<header>
 		<img src="img/banner.png" alt="">
-		<img src="img/granthams.png" alt="">
-		<img src="img/paint.png" alt="">
+		<img src="img/granthams.png" alt="" id="granthams">
+		<img src="img/paint.png" alt="" id="paint">
 		<input type="search" placeholder="Search" name="">
 		<nav>
 			<ul>
@@ -20,12 +21,14 @@
 			</ul>
 		</nav>
 	</header>
-	<section>
-		<article>
+	<section id="primerSeccion">
+		<article id="secc01art01">
 			<img src="img/slide.jpg" alt="">
 		</article>
-		<article>
-			We can offer
+		<article id="secc01art02">
+			<span class="colorrosa letragrande nito">
+				We can offer
+			</span>
 			<UL>
 				<li>Highly Competitive</li>
 				<li>Variable Data</li>
@@ -37,27 +40,34 @@
 				<li>Great Customer Service</li>
 			</UL>
 		</article>
-		<img src="img/bg_offer.png" alt="">
+		<img src="img/bg_offer.png" alt="" id="bgoffer">
 	</section>
-
-	<section>
+	<section id="segundaSeccion">
 		<article>
+			<span class="colorrosa letramediana nito">
 			01772 250207
+			</span>
 		</article>
 	</section>
-	<section>
+	<section id="terceraSeccion">
 		<article>
 			<img src="img/cerdito.png" alt="">
-			Save this Spring
+			<span class="colorrosa nito">
+				Save this Spring
+			</span>
 			<br>
 			Fabolous Discounts on canva's and roll up's as well as many offers
 			<p>
+			<span class="colorrosa nito">
 			Find out more...
+			</span>
 			</p>
 		</article>
 		<article>
 			<img src="img/hoja.png" alt="">
-			ECO Friendly
+			<span class="colorverde nito">
+				ECO Friendly
+			</span>
 			<br>
 			Eco Friendly Materials used in our production process.
 			<br>
@@ -65,16 +75,21 @@
 		</article>
 		<article>
 			<img src="img/new.png">
-			Uploap your file
-			<br>
+			<span class="colorazul nito">
+				Upload your file<br>
+			</span>
 			Making it easy to order your printing today.
 			Our upload facility enables you send your files directly to us. Use the notes section to inform us of your order, then sit back and wait for a moment of pur team to contact you.
 			<p>
-			Upload your File Now...
+			<span class="colorazul">
+				Upload your File Now...
+			</span>
 			</p>
 		</article>
 		<article>
-			Stay in touch 
+			<span class="colorrosa letramediana">
+				Stay in touch 
+			</span>
 			<br>
 			join our mailing list today<br>
 			<input type="email" placeholder="Email goes here">
