--- a/practica02/index.html
+++ b/practica02/index.html
@@ -27,7 +27,7 @@
 		</article>
 		<article id="secc01art02">
 			<span class="colorrosa letragrande nito">
-				We can offer
+				We can offer...
 			</span>
 			<UL>
 				<li>Highly Competitive</li>
