--- a/practica02/index.html
+++ b/practica02/index.html
@@ -86,7 +86,7 @@
 			</span>
 			</p>
 		</article>
-		<article>
+		<article id="secc03art04">
 			<span class="colorrosa letramediana">
 				Stay in touch 
 			</span>
@@ -96,5 +96,21 @@
 			<input type="button" value="send" name="">
 		</article>
 	</section>
+	<footer ID="piepagina">
+		<article>
+			Copright c 2014 Granthams Ltd|All Rights Reserved|Credits<br>
+			Home|Print|Copy|Finishing|Design|Information|Contact Us<br>
+			Privacy Policy|Copy|Finishing|Design|Information|Contact us<br>
+		</article>
+		<article>
+			<span>
+				Other Granthams Websites:
+			</span>
+			Granthams|ArtDiscount|GraphicDiscount|PosterPrints
+		</article>
+		<article>
+			<input type="button" value="Valid HTML5">
+		</article>
+	</footer>
 </body>
 </html>
