--- a/practicacss03/index.html
+++ b/practicacss03/index.html
@@ -5,53 +5,108 @@
 	<title>Practica 03 HTML5+CSS3</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body>
-	<header>
+<body class="FondoNegro">
+	<header class="FondoBlanco">
 		<input type = "search" value="search">
-		<img src="img/menu.png">
+		<img src="img/menu.png" id="imagenmenu">
 	</header>
 	<section id="seccion1" class="FondoNegro">
-		<article id="art01secc01" class="ColorNegro">
+		<article id="seccion01art01" class="ColorNegro">
 			<img src="img/gu_logo.png">
 			<ul>
-				<li>HOME</li>
-				<li>ABOUT US</li>
-				<li>NEWS</li>
-				<li>PARTNERS</li>
-				<LI>CONTACT</LI>
+				<li class="colorBlanco">HOME</li>
+				<li class="colorgris2">ABOUT US</li>
+				<li class="colorgris2">NEWS</li>
+				<li class="colorgris2">PARTNERS</li>
+				<LI class="colorgris2">CONTACT</LI>
 			</ul>
 		</article>
-		<article class="FondoVerde">
-			<span>EXPORT AND IMPORT OF GOODS</span>
+		<article class="FondoVerde colorBlanco">
+			<span class="letragrande">EXPORT AND IMPORT OF GOODS</span>
 			<p>GUG assists companies interested in export of product from Georgia or in import goods on Georgian or in import goods on Georian market</p>
 			<span class= "mediana">MORE ON TRADE</span><br>
-			<span class= ""> > </span>
+			<span class= "SpanAbajo1"> > </span>
 		</article>
-		<article class="FondoGris">
-			<span class="grande">INVEST IN REAL ESTATE IN GEORGIA</span>
+		<article class="FondoGris colorgris2">
+			<span class="letragrande">INVEST IN REAL ESTATE IN GEORGIA</span>
 			<p>GUG works with numer of real estate companies and property developers in order to assist individuals or companies</p>
-			<span CLASS="negrito">MORE ON REAL ESTATE</span>
-			<span class= ""> > </span>
+			<span CLASS="nito colorBlanco">MORE ON REAL ESTATE</span><br>
+			<span class= "SpanAbajo2"> > </span>
 		</article>
-		<article class="FondoRojo">
-			<span class="grande">SO MUCH TO DISCOVER</span>
+		<article class="FondoRojo colorBlanco">
+			<span class="letragrande">SO MUCH TO DISCOVER</span>
 			<p>Our tourfield company provides its clients with quality services and highly competitive prices could be found on Georgian tourism market today</p>
-			<span CLASS="negrito">MORE ON REAL TOURISM</span>
-			<span class= ""> > </span>
+			<span CLASS="nito colorBlanco">MORE ON REAL TOURISM</span><br>
+			<span class= "SpanAbajo3"> > </span>
 		</article>
-		<article CLASS="FondoBlanco">
-			
+		<article CLASS="FondoBlanco colorgris2">
+			<span class="letragrande">SPREADING INNOVATIONS IN ICT SECTOR</span>
+			<p>Introduction of innocate ICT technologies on Georgian market and promotion of investments in ICT sector</p>
+			<span CLASS="nito colorBlanco">MORE ON ICT TECHNOLOGIES</span><br>
+			<span class= "SpanAbajo4"> > </span>
 		</article>
 	</section>
-	<section>
-		<article></article>
-		<article></article>
-		<article></article>
+	<section id="seccion2" class="FondoNegro">
+		<article>
+			<img src="img/news_rojo.png">
+		</article>
+		<article>
+			<img src="img/news_verde.png">
+		</article>
+		<article>
+			<img src="img/news_claro.png">
+		</article>
 	</section>
 	<footer>
-		<article></article>
-		<article></article>
-		<article></article>
+		<article>
+			Tuesday 2010 <br>
+			<span class="nito colorgris">
+				Visit of Dutch Health to Georgia
+			</span>
+			<br>
+				On February 21-23 2010, delegations of <br>
+				Israeli group of investors and "Dutch Health" <br>
+				company visited Georgia, with interest to <br>
+				explore Health care system projects, clinics, <br>
+				hospitals insurance companies and <br>
+				Diagnostic centers. Parties met with <br>
+				government
+				<p>
+			<span class="muevele colorgris">
+				Read more
+			</span>
+		</article>
+		<article>
+			Getsadze & pateishvilli <br>
+			Doheny Global Group <br>
+			Unomobi inc. <br>
+			Munir Sukhtian Group <br>
+			Global Capital Associates <br>
+			<p>
+			<span class="muevele colorgris">
+				Read more
+			</span>
+		</article>
+		<article>
+			<span class="colorgris">
+				Send a message <br>
+			</span><br>
+			<table>
+				<tr>
+					<td>Tel:&nbsp;&nbsp;&nbsp;&nbsp; </td>
+					<td>+995 591 197 791</td>
+				</tr>
+				<tr>
+					<td>Fax:&nbsp;&nbsp;&nbsp;&nbsp;</td>
+					<td>(995 32) 29 14 40 </td>
+				</tr>
+			</table>
+			Email: <span class="colorAzul"> info@globalunigroup.ge </span>
+			<p>
+			<span class="muevele colorgris">
+				Read more
+			</span>
+		</article>
 	</footer>
 </body>
 </html>
