--- a/vue_ejemplos/index.html
+++ b/vue_ejemplos/index.html
@@ -5,20 +5,26 @@
 	<title>Vue ejemplos</title>
 </head>
 <body>
-	<?php
-		echo '<marquee>Hola mundo</marquee>';
-			 ?>
-	<!--<marquee>LE METI MARQUEE A VUEJS JA JA JA <BR> -->
+	
 	<div id="app">
 		<h1>{{ titulo }}</h1>
+		<input type="text" v-model="nuevaFruta" @keyup.enter="agregarFruta" >
+		<button @click="agregarFruta">Agregar Fruta</button>
 		<ul>
 			<li v-for="fruta of frutas">{{ fruta }}</li>
 		</ul>
 		<ul>
-			<li v-for="fruta of frutas2">{{ fruta.nombre + " - " + fruta.cantidad }}
-				<span v-if="fruta.cantidad == 0"> no hay en almacen</span>
+			<li v-for="fruta of frutas2">
+			<!-- -->
+			<!--<li v-for="fruta of frutas2">{{ fruta.nombre + " - " + fruta.cantidad }} -->
+				<input type="text" v-model="fruta.cantidad">
+				{{ fruta.nombre }}
+				<button @click="fruta.cantidad++"> + </button>
+				<button @click="fruta.cantidad--"> - </button>
+				<span v-if="fruta.cantidad <= 0" > no hay en almacen</span>
 			</li>
 		</ul>
+		<h4>Total: {{ sumarFrutas }}</h4>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 	<script src="js/primervue.js"></script>
